backend/src/judge/docker/userData/e881bba3953849ffdf1297b3b5068c9c/5b21132f93c8629980b690f062253739.out
/55e417a696de4ca36e26cf88a2d3d2a0/CodeArea.java:15: error: illegal start of expression
	    static int x = 10;
	    ^
1 error
